# codespace-learning

./: AvgEngine.cpp  AvgEngine.h  CMakeLists.txt  README  README.md  index.js  package.json  pcpf.h  welcome.html
include/: Book.h  Circle.h  Copilot.h  DataAggregator.h  FileProcessor.h  Item.h  Library.h  Magazine.h  MultiplicationTable.h  Rectangle.h  Shape.h  utils.h
src/: Book.cpp  Circle.cpp  Copilot.cpp  Copilot_m.cpp  DataAggregator.cpp  FileProcessor.cpp  Item.cpp  Library.cpp  Magazine.cpp  MultiThreadExec_main.cpp  MultiplicationTable.cpp  Pdktest_main.cpp  Rectangle.cpp  TicTacToe_m.cpp  epoch.cpp  graphics_main.cpp  library_main.cpp  main.cpp  main_multiplication.cpp  test_Copilot_m.cpp  utils.cpp
